--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,107 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Шапка сайту-->
+    <header>
+        <nav>
+            <a href="/">
+                <img src="./images/webstudio.svg" alt="">
+            </a>
+
+            <ul>
+                <li> <a href="">Студія</a></li>
+                <li> <a href="">Портфоліо</a></li>
+                <li> <a href="">Контакти</a></li>
+            </ul>
+
+            <ul>
+                <li> <a href="">info@devstudio.com</a></li>
+                <li> <a href="">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+    </header>
     
+    <main>
+
+        <!--Герой -->
+        <section>
+            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+            <a href="">Замовити послугу</a>
+        </section>
+
+        <!--Переваги -->
+        <section>
+            <h2>ПЕРЕВАГИ</h2>
+            <ul>
+                <li> 
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>   
+        </section>
+
+        <!--Чим ми займаємося-->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                   <img src="./images/box1.jpg" alt="">
+                </li>
+                <li>
+                    <img src="./images/box2.jpg" alt="">
+                </li>
+                <li>
+                    <img src="./images/box3.jpg" alt="">
+                </li>
+            </ul>
+        </section>
+
+        <!--Наша команда-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/team1.jpg" alt="">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team2.jpg" alt="">
+                    <h3>Ольга Рєпіна</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team3.jpg" alt="">
+                    <h3>Микола Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team4.jpg" alt="">
+                    <h3>Михайло Єрмаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
+    </main>
+
+    <!--Підвал-->
+    <footer>
+        Футер
+    </footer>
+
+
 </body>
 </html>
