--- a/index.html
+++ b/index.html
@@ -10,47 +10,47 @@
     <!--Шапка сайту-->
     <header>
         <nav>
-            
+            <p lang="en">WebStudio</p>
 
             <ul>
                 <li> <a href="">Студія</a></li>
                 <li> <a href="">Портфоліо</a></li>
                 <li> <a href="">Контакти</a></li>
-            </ul>
-
-            <ul>
-                <li> <a href="">info@devstudio.com</a></li>
-                <li> <a href="">+38 096 111 11 11</a></li>
-            </ul>
+            </ul>           
         </nav>
+
+        <ul>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     
     <main>
 
         <!--Герой -->
         <section>
-            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <a href="">Замовити послугу</a>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button>Замовити послугу</button>
         </section>
 
-        <!--Переваги -->
+        <!--Особливості -->
         <section>
-            <h2>ПЕРЕВАГИ</h2>
+            <h2>Особливості</h2>
             <ul>
                 <li> 
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3>Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3>Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3>Планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3>Сучасні технології</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>   
@@ -61,13 +61,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                   <img src="./images/box1.jpg" alt="">
+                   <img src="./images/box1.jpg" alt="" width="370">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" alt="">
+                    <img src="./images/box2.jpg" alt="" width="370">
                 </li>
                 <li>
-                    <img src="./images/box3.jpg" alt="">
+                    <img src="./images/box3.jpg" alt="" width="370">
                 </li>
             </ul>
         </section>
@@ -77,28 +77,27 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team1.jpg" alt="">
+                    <img src="./images/team1.jpg" alt="" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team2.jpg" alt="">
+                    <img src="./images/team2.jpg" alt="" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team3.jpg" alt="">
+                    <img src="./images/team3.jpg" alt="" width="270">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team4.jpg" alt="">
+                    <img src="./images/team4.jpg" alt="" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
-
     </main>
 
     <!--Підвал-->
