Додаємо розмітку макета

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студія</title>
 </head>
 <body>
     <!--Шапка сайту-->
     <header>
         <nav>
-            <p lang="en">WebStudio</p>
-
+            <a href="/">
+                <p lang="en">WebStudio</p>
+            </a>  
+            
             <ul>
-                <li> <a href="">Студія</a></li>
-                <li> <a href="">Портфоліо</a></li>
-                <li> <a href="">Контакти</a></li>
+                <li> <a href="/">Студія</a></li>
+                <li> <a href="/">Портфоліо</a></li>
+                <li> <a href="/">Контакти</a></li>
             </ul>           
         </nav>
 
@@ -30,7 +32,7 @@
         <!--Герой -->
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
+            <button type="button">Замовити послугу</button>
         </section>
 
         <!--Особливості -->
@@ -61,13 +63,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                   <img src="./images/box1.jpg" alt="" width="370">
+                   <img src="./images/box1.jpg" alt="" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" alt="" width="370">
+                    <img src="./images/box2.jpg" alt="" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/box3.jpg" alt="" width="370">
+                    <img src="./images/box3.jpg" alt="" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -77,22 +79,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team1.jpg" alt="" width="270">
+                    <img src="./images/team1.jpg" alt="" width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team2.jpg" alt="" width="270">
+                    <img src="./images/team2.jpg" alt="" width="270" height="260">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team3.jpg" alt="" width="270">
+                    <img src="./images/team3.jpg" alt="" width="270" height="260">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team4.jpg" alt="" width="270">
+                    <img src="./images/team4.jpg" alt="" width="270" height="260">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
@@ -101,10 +103,16 @@
     </main>
 
     <!--Підвал-->
-    <footer>
-        Футер
+    <footer>        
+        <a href="/">
+            <p lang="en">WebStudio</p>
+        </a>
+        <address>м. Київ, пр-т Лесі Українки, 26</address>               
+        <ul>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </footer>
-
 
 </body>
 </html>
