--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                   <img src="./images/box1.jpg" alt="" width="370" height="294">
+                   <img src="./images/box1.jpg" alt="Планшет з клавіатурою на столі" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" alt="" width="370" height="294">
+                    <img src="./images/box2.jpg" alt="Ноутбук та мобільний телефон" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/box3.jpg" alt="" width="370" height="294">
+                    <img src="./images/box3.jpg" alt="Планшет" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -79,22 +79,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team1.jpg" alt="" width="270" height="260">
+                    <img src="./images/team1.jpg" alt="Фото Ігора Дем'яненко" width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team2.jpg" alt="" width="270" height="260">
+                    <img src="./images/team2.jpg" alt="Фото Ольги Рєпіної" width="270" height="260">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team3.jpg" alt="" width="270" height="260">
+                    <img src="./images/team3.jpg" alt="Фото Миколи Тарасова" width="270" height="260">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team4.jpg" alt="" width="270" height="260">
+                    <img src="./images/team4.jpg" alt="Фото Михайла Єрмакова" width="270" height="260">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
