Відкореговано розмітку макета

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <!--Шапка сайту-->
     <header>
         <nav>
-            <a href="/">
-                <p lang="en">WebStudio</p>
-            </a>  
+            <a lang="en" href="/">WebStudio</a>  
             
             <ul>
                 <li> <a href="/">Студія</a></li>
@@ -104,14 +102,14 @@
 
     <!--Підвал-->
     <footer>        
-        <a href="/">
-            <p lang="en">WebStudio</p>
-        </a>
-        <address>м. Київ, пр-т Лесі Українки, 26</address>               
-        <ul>
+        <a lang="en" href="/">WebStudio</a>
+        <address>
+            <p>м. Київ, пр-т Лесі Українки, 26</p>               
+            <ul>
             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+            </ul>
+        </address>
     </footer>
 
 </body>
